Bug 1044 - STT20000A Tape drive dma blacklist
Summary: STT20000A Tape drive dma blacklist
Status: CLOSED CODE_FIX
Alias: None
Product: IO/Storage
Classification: Unclassified
Component: IDE (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Bartlomiej Zolnierkiewicz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2003-08-05 00:55 UTC by Andrew Lunn
Modified: 2007-06-02 15:36 UTC (History)
3 users (show)

See Also:
Kernel Version: 2.6.0-test2
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
patch to blacklist the device (518 bytes, patch)
2003-08-05 00:57 UTC, Andrew Lunn
Details | Diff

Description Andrew Lunn 2003-08-05 00:55:52 UTC
Distribution:         Debian Woody
Hardware Environment:
Software Environment:
Problem Description:

I have a seagate STT20000A IDE tape drive which im using with an SiS IDE
controller. The defaults for SiS is for every IDE device to use DMA. This causes
my tape drive a problem because its DMA is broken. I talked to Seagate and they
confirm that the device will only work reliably in PIO mode. 

Here is a patch to add this device to the IDE black list.
Comment 1 Andrew Lunn 2003-08-05 00:57:17 UTC
Created attachment 612 [details]
patch to blacklist the device
Comment 2 Adrian Bunk 2005-07-02 07:28:41 UTC
Bart, can you comment on this bug?
Comment 3 Adrian Bunk 2006-03-13 13:08:31 UTC
Bart?
Comment 4 Nishanth Aravamudan 2006-05-16 12:12:20 UTC
Andrew,

Is this still a problem for you in more recent kernels?

Thanks,
Nish
Comment 5 Andrew Lunn 2006-07-31 05:18:26 UTC
Sorry, no idea. I took the drive out to make room for a DVD writer.

Seagate did confirm that the device would only work relibably with PIO, so
blacklisting it does seem to be the correct thing to do.
Comment 6 Adrian Bunk 2006-11-23 15:48:40 UTC
Alan, can you look at the patch from this bug?
Comment 7 Alan 2006-11-23 16:26:42 UTC
Looks fine to me, wants applying to libata as well. Send patches.
Comment 8 Adrian Bunk 2007-01-23 14:41:44 UTC
Bart, can you apply the patch from this bug?
Comment 9 Dave Jones 2007-05-21 07:54:08 UTC
Patch re-posted upstream. Four years for a bug which has a patch available is
just shockingly bad.
Comment 10 Bartlomiej Zolnierkiewicz 2007-06-02 15:36:33 UTC
Merged upstream.  I'm closing the bug.

Sorry for the sad record (I partially blame bugzilla for that)...

Note You need to log in before you can comment on or make changes to this bug.